edited first half of report for reals

--- a/Report/final_report.tex
+++ b/Report/final_report.tex
@@ -126,9 +126,11 @@ This project consists of designing and developing a line following robot that ca
 
 \section{Design Overview}
 
-This project consisted of the design and construction of part of an autonomous line following robot, which will complete certain benchmarks and can pick up "food pellets" in a given map. There are two levels of this, in the first the objective is to collect all the food pallets in the given map and in the second the objective is to collect the pre-specified food pallets by taking the shortest path.
+This project consists of the design and construction of part of an autonomous line following robot, which is to complete certain benchmarks and pick up "food pellets" dispersed around a given maze. There are two levels of operation. In the first, the objective is to collect food pellets that exist at every coordinate in the maze. The second objective is to collect food pellets at pre-specified coordinates by taking the shortest path.
 
-Much of the robot's hardware was prescribed and given to us in an assembled state for working on. The sensor circuit was the only important part of the hardware that needed to be completed as part of this project. The robot was controlled from a Cypress PSoC 5LP, which interfaced with the Sensors, RF, Bluetooth \&  Motors to allow the robot to meet its requirements. This report outlines the hardware and software considerations and decisions that were made as part of this project.
+Pathfinding and control algorithms were vital for the successful functioning of the robot. Various known pathfinding algorithms were explored, before finally deciding on Depth First Search for level one, and A* for level two.  The PID control algorithm was also utilised to ensure that the robot functioned at a set speed, despite its battery voltage.
+ 
+Much of the robot's hardware was prescribed and provided in an assembled state. The sensor circuit required for line detection was the primary aspect of the hardware that needed to be considered as part of this project. The robot was controlled from a Cypress PSoC 5LP, which interfaced with the light sensors, RF, Bluetooth \& Motors to allow the robot to meet its objectives. This report outlines the hardware and software considerations and decisions that were made as part of this project.
 
 %----------------------------------------------------------------------------------------
 %	ANALOGUE SECION
@@ -137,53 +139,52 @@ Much of the robot's hardware was prescribed and given to us in an assembled stat
 
 \section{Analogue}
 
-The portion of the hardware that needed to be developed as part of this project centred around the collection and processing of vision information. This was in the form of a surface mounted phototransistor, the TEMT6200. The map is projected down from a ceiling mounted projector, where black lines represent lines and white areas symbolizes the walls. To be able to sense the difference between these and convey this information on to the PSoC is the aim of the analogue section of this project. The following sections outline the considerations and decisions the group made while developing the analogue components of this project.
+The portion of the hardware that needed to be developed as part of this project centred around the collection and processing of vision information. This was done in the form of a surface mounted phototransistor, the TEMT6200. The map is projected down from a ceiling mounted projector, where black lines represent lines and white areas symbolizes the walls. The aim of the analogue portion of this project is to sense the difference between these and convey this information to the PSoC. The following sections outline the considerations and decisions the made by the group while developing the analogue components of this project.
 
 \subsection{Phototransistor output signal}
 
-The phototransistor can be configured in two ways: common emitter or common collector. In our design the common base configuration is not possible as the base of this transistor is not able to be connected to the circuit. In the common collector configuration, the output signal was very flat $(Black: V_{avg} = 2.58V, V_{Pk-Pk} = 0.05V, White: V_{avg} = 2.74V, V_{Pk-Pk} = 0.10V)$ and difficult to differentiate between the black and white lines. On the other hand in the common emitter configuration, there was a sharp difference between the black and white lines $(Black: V_{avg} = 4.09V, V_{Pk-Pk} = 0.09V, White: V_{avg} = 2.84V, V_{Pk-Pk} = 1.54V)$. As a result a decision was made to use the common emitter configuration for the light sensors.
-
+The phototransistor can be configured in two ways: common emitter or common collector. For this design the common base configuration was not viable as the base of the transistor was unable to be connected to the circuit. In the common collector configuration, the output signal was very flat $(Black: V_{avg} = 2.58V, V_{Pk-Pk} = 0.05V, White: V_{avg} = 2.74V, V_{Pk-Pk} = 0.10V)$ and difficult to differentiate between the black and white lines. On the other hand in the common emitter configuration, there was a sharp difference between the black and white lines $(Black: V_{avg} = 4.09V, V_{Pk-Pk} = 0.09V, White: V_{avg} = 2.84V, V_{Pk-Pk} = 1.54V)$. As a result, a decision was made to use the common emitter configuration for the light sensors.
 \subsection{Circuitry}
 
-There are two main concerns in the phototransistor output signal that must be resolved by the circuitry; these being the removal of the DC offset in the signal, and the filtering of noise. The DC offset needed to be removed as this varied depending on projector brightness in various parts of the map \& external lighting. The projector to be used for this project has a refresh rate of 120Hz, while the ambient light source in the laboratory has a refresh rate of 100Hz. Therefore a High pass filter with a cut-off less than 120Hz is necessary for this project. In this regard, the group's decision was to implement a RC High Pass filter with a cut-off frequency of 106Hz.
+There were two main concerns in the phototransistor output signal that was to be resolved by the circuitry; these being the removal of the DC offset in the signal, and the filtering of noise. The DC offset needed to be removed as this varied depending on projector brightness in various parts of the map \& external lighting. The projector to be used for this project has a refresh rate of 120Hz, while the ambient light source in the laboratory has a refresh rate of 100Hz. Therefore, a high pass filter with a cut-off less than 120Hz was necessary for this project. In this regard, the group's decision was to implement a RC High Pass filter with a cut-off frequency of 106Hz.
 
-The next thing that needed to be considered was how the signal will be passed onto the PSoC, in digital or analogue form. If the signal were to be passed on as a analogue signal, the PSoC must sample the signal and process this into a binary output (black or white) at a fast enough rate for the robot to accurately follow the line. Alternatively a hardware Schmitt Trigger can be used on the output signal to create a digital binary output which can be read by the PSoC from one of it's digital pins. This solution processes the information into what is relevant to us in real time. After much thought and weighting of the pros and cons, a decision was reached to  use a Schmitt Trigger and process the signal into a digital signal to be passed into the PSoC.
+The next design aspect that needed to be considered was how the signal would be passed into the PSoC, in digital or analogue form. If the signal were to be passed in as an analogue signal, the PSoC must sample the signal and process this into a binary output (black or white) at a rate fast enough for the robot to accurately follow the line. Alternatively, a hardware Schmitt Trigger could be used on the output signal to create a digital binary output which can be read from the PSoC digital input pins. This solution would process the information into what is relevant to in real time. After much thought and weighting of the pros and cons, a decision was reached to use a Schmitt Trigger and process the signal into a digital signal to be passed into the PSoC.
 
 \subsection{Light sensor array and robot orientation}
 
-The project requires a sensor circuit layout such that it can communicate as much information as possible about the current position of the robot to the PSoC, so that the robot can interpret the track well to make an informed decision on where to move to next. After doing much research into the intricacies of line following robots, it became apparent that a line could be followed with as few as two sensors.
+The project required a sensor circuit layout that allowed for maximum communication of the robot’s position on the maze, so that the robot can interpret the track and make well-informed decisions on where to move to next. After doing much research into the intricacies of line following robots, it became apparent that a line could be followed with as few as two sensors.
 
 One sensor immediately on either side of the inside of the line is sufficient to track a line and follow it. These two sensors must be placed as far forward as possible so as to make the deviations of the robot more pronounced and easier to detect \& correct. This would result in the robot being able to follow the lines more smoothly and jerk a lot less than if the sensors were near the axis of the wheels. 
 
-To further dampen the oscillations, we need to be able to accurately know how far off the line the robot has deviated. For this purpose two additional sensors were added on either side of the line slightly behind the front two sensors. These two sensors allowed the robot to calculate how far off the line it had deviated and therefore apply the correct correction to get back onto the line. 
+To further dampen the oscillations, it was necessary to accurately know how far off the line the robot has deviated. For this purpose, two additional sensors were added on either side of the line slightly behind the front two sensors. These two sensors allowed the robot to calculate how far off the line it had deviated and hence apply the correct correction to return back to the line. 
 
-In our project it is not sufficient for the robot to follow a line, it must also be able detect intersections and take 90$^{\circ}$ turns. For this purpose two addition sensors were used, these were placed at extreme ends of the board along the front edge of the PCB. These were placed forward so that when an intersection is detected by these sensors, there is enough of a braking distance for the robot to brake in time to take a turn at the intersection. This was a later modification that was made when testing with the robot showed us that the centre four sensors are not sufficient to accurately track intersections.
+In this project it was not sufficient for the robot to follow a line. It should additionally be able detect intersections and execute 90$^{\circ}$ turns. For this purpose, two addition sensors were placed at the extreme ends of the board along the front edge of the PCB. These were placed forward so that when an intersection was detected by these sensors, there was enough of a braking distance for the robot to brake in time to turn at the intersection. This was a modification that was made to the sensor array when testing, as the robot displayed that the centre four sensors were not sufficient to accurately track intersections.
 
 \subsection{PCB Design}
 
 An important decision that needed to be made with regards to the PCB design was the use of through-hole mounted (THM) or Surface Mounted Devices (SMD) components.
 
-The use of through hole components allows us to rapidly prototype the board, with ease of switching out components after assembly. As the component leads run through the board and soldered over a larger surface area, through-hole mounted circuit boards offer higher reliability and stronger connections. This is very important in cases where there are extreme accelerations, collisions or high temperatures.
+The use of through hole components would allow for rapid prototyping of the board, with ease of switching out components after assembly. As the component leads run through the board and are soldered over a larger surface area, through-hole mounted circuit boards offer higher reliability and stronger connections. This is very important in cases where there are extreme accelerations, collisions or high temperatures.
 
-Surface mount technology does not require holes to be drilled through the board, are much smaller, can be automatically placed and can be mounted on both sides of the board. This usually leads to a smaller designs, higher component density, lower cost and faster assembly times. 
+Surface mount technology does not require holes to be drilled through the board, are much smaller, can be automatically placed, and can be mounted on both sides of the board. This usually leads to smaller physical area being taken up, higher component density, lower cost, and faster assembly times. 
 
-In this project, higher reliability and extreme environmental conditions are not of major concern. But the benefits of surface mount technology allows a quicker design and assembly time for this project. Both sides of this decision were carefully considered and the group came to a decision of going with the use of SMD components.
+In this project, higher reliability and extreme environmental conditions were not of major concern. The benefits of surface mount technology allowed for quicker design and assembly time for this project. Hence, after careful consideration the group came decided to use SMD components for the design and assembly of the PCB.
 
-Other considerations for the PCB design were the routing of the pins to the PSoC, whether the H-Bridges will be connected via traces and the presence of switches for easy operation. The pin assignments to be used for routing the pins to the PSoC were very carefully planned and executed. Much consideration was put into reducing track lengths and making certain that only usable pins were used.
+Other considerations for the PCB design included the routing of the pins to the PSoC, whether the H-Bridges would be connected via traces, and the presence of switches for easy operation. The pin assignments to be used for routing the pins to the PSoC were very carefully planned and executed. Much consideration was put into reducing track lengths and making certain that only usable pins were used.
 
-Two bi-polar switches that are easy to operate were used as a power on/off switch for the board and localization LEDs. These were used as it allowed both the PCB and the localization LEDs to be individually turned on and off, this was important when sharing the maze with other groups' robots without interference. In addition two 2-DIP switches were added to enable easy switching between the various modes and configurations of the robot.
+Two bi-polar switches that are easy to operate were used as power on/off switches for the board and localization LEDs. This decision was made as it allowed both the PCB and the localization LEDs to be individually turned on and off. This was important when sharing the maze with other groups' robots without interference. Additionally, two 2-DIP switches were added to enable easy switching between the various modes and configurations of the robot.
 
-Connecting the H-bridges via traces would result in a cleaner design with no rogue wires, but would come at the expense of having more long pins connecting the PCB to the daughterboard, which would cause headaches when assembling the two together. A decision was taken to connect via traces as we realized that the board need not be connected together many times and that this little inconvenience was well worth the much tidier robot connections.
+Connecting the H-bridges via traces would result in a cleaner design with no rogue wires, but would come at the expense of having more long pins connecting the PCB to the daughterboard, which would cause additional difficulty when assembling the two together. A decision was made to connect via traces as it was realized that the board need not be connected together many times and that this small inconvenience was well worth the much tidier robot connections.
 
 \subsection{Testing and Verification}
 
-Testing, Validation \& Verification of a analogue design are essential components of the development process. As part of our design project, we made sure every one of these steps were executed properly. The first stage that took place was verification of the design using LTSpice.
+Testing, Validation \& Verification of an analogue design are essential components of the development process. As part of this design project, it was ensured that every one of these steps were executed properly. The first stage that took place was verification of the design using LTSpice.
 
-During AC simulation it was found that we had made a calculation mistake with calculating the filter circuit capacitor, this was promptly corrected. Another issue that arose was the long response time with the Schmitt Trigger. This was found to be a result of the unnecessarily large capacitor placed in front of Schmitt trigger for smoothening the input signal. This capacitor was replaced with a capacitor of a slightly lower value to balance response time and correct operation of the circuit.
+During AC simulation it was found that there had been a calculation mistake with calculating the filter circuit capacitor value. This was promptly corrected. Another issue that arose was the long response time associated with the Schmitt Trigger. This was found to be a result of the unnecessarily large capacitor placed in front of Schmitt trigger for smoothening the input signal. This capacitor was replaced with a capacitor of a slightly lower value to balance response time and correct operation of the circuit.
 
-During the validation stage of the development, where we tested the circuit on a breadboard, no further complications arose. We also decided to validate our sensor circuit thoughts, by strapping the breadboard onto the robot to see how well it followed the lines. By doing this we came to realize that using only two sensors was not sufficient to follow a line, and that additional sensors must be used. 
+During the validation stage of the development, the circuit design was tested using a breadboard, and no further complications arose. It was also decided to validate the sensor circuit considerations, by strapping the breadboard onto the robot to see how well it followed the lines. By doing this the conclusion was made that using only two sensors was not sufficient to follow a line, and that additional sensors must also be used. 
 
-During the verification stage of the sensor layout, we found that our sensor layout only allowed us to follow lines and not accurately track intersections. As being able to locate intersections are a key part of traversing the Pacman maze, this was a critical issue that needed to be resolved. This was rectified by moving the back two backup sensors to the front edges of the PCB. These sensors were placed such that they would go logic HIGH when the robot reached an intersection and not when the robot had deviated from the line.
+During the verification stage of the sensor layout, it was found that the sensor layout only allowed lines to be followed accurately, but did not allow intersections to be accurately detected. Being able to locate intersections were a key part of traversing the Pacman maze, so this was a critical issue that needed to be resolved. This problem was rectified by moving the rear two backup sensors to the front edges of the PCB. These sensors were placed such that they would emit logic HIGH when the robot reached an intersection and not when the robot had deviated from the line.
 
 \subsection{Final Design}
 
